update key in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,8 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://yourprojectdomain.com",
+        "APP_URL": "https://promedic-prod.vercel.app/",
+        "APP_KEY": "base64:h2IdQ8behq/vaDyxuTWBk7xsSCMkC1glT/6FoMZeiBk=",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
